@@ -19,6 +19,7 @@ NB: "RCS: X..Y " means that the particular release includes
   - performance improvements
   - of interest to hackers (see source, BI => backward incompatible)
     - ‘:sgf-gametree’ internal representation inverted (BI)
+    - ‘gnugo-magic-undo’ handles SPEC ‘0’
 
 - 2.3.1 | 2014-02-27
   - portability fixes
